<resources>
    <string name="hello">Hello!</string>
    <string name="app_name">Smart Calculator</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="yes_i_know">Yes I know</string>
    <string name="read_next_time">Read next time</string>
    <string name="menu_cmdline">Command line</string>
    <string name="menu_calcassist">Calc Assistant</string>
    <string name="menu_calculate">Calculate</string>
    <string name="menu_plotgraph">Plot chart</string>
    <string name="menu_plot2dgraph">Plot 2D chart</string>
    <string name="menu_plot3dgraph">Plot 3D chart</string>
    <string name="menu_chartmgr">Chart manager</string>
    <string name="menu_integrate">Integrate</string>
    <string name="menu_history">History</string>
    <string name="menu_alwayshidesoftkeyboard">Hide Soft Input</string>
    <string name="menu_enablesoftkeyboard">Enable Soft Input</string>
    <string name="menu_settings">Settings</string>
	<string name="menu_configinputpads">Config InputPads</string>
    <string name="menu_fill_example">Fill Example</string>
    <string name="menu_help">Help</string>
    <string name="setting_number_format_prompt">Set Bits of Precision</string>
    <string name="setting_variable_range_prompt">Set variable range to plot charts in Smart Calc</string>
    <string name="setting_record_length_prompt">Set Record Length</string>
    <string name="setting_extreme_value_prompt">Set Scientific Notation</string>
    <string name="setting_auto_start_prompt">Auto Start Program</string>
    <string name="setting_application_data_storage_prompt">Storage to save application data</string>
    <string name="do_you_know">Do you know ...</string>
    <string name="whats_new">What\'s new</string>
    <string name="do_not_show_whats_new_again">Do not show this box next time.</string>
    <string name="welcome_message">Input help or an expression like 3 + log(4.1 / avg(1,5,-3)), then press Go!</string>
    <string name="welcome_message2">Hints:\n* Touch the input text edit box to show soft keyboard or input pad. Slide the input pad to left or right to select numbers, operators or different functions to input.\n* Input help (by clicking the life ring button) and then function name or operator to get quick help information, or an expression like 3 + log(4.1 / avg(1,5,-3)), or a group of expressions like\ny1*3+4*y2-3*y3==7\ny2/2-3*y3+y1==9\ny3/3-6*y1+y2==2.4\n, then press start to calculate!\n* Please remember that equal operator is \'==\' while \'=\' is to assign a value to a variable. Also, power operator is \'**\' not \'^\'.</string>
    <string name="welcome_message3">Hints:\n* Touch the input text box to show soft keyboard or input pad. Slide the input pad to left or right to select numbers, operators or functions to input.\n* Input help (by clicking the life ring button) and then function name or operator to get quick help information.\n* Input single expression like 3+log(4.1/avg(1,5,-3)), or expressions like\ny1*(3.8+i)==7+4*y2\ny2/2-3*y1==9.4\n, then press start button to calculate value(s).\nInput equation(s) like r = cos(θ), y==sin(x) and/or z==x+y, then press plot button to draw 2D, polar or 3D charts!\n* Please remember that equal operator is \'==\' while \'=\' is to assign a value to a variable. Also, power operator is \'**\' not \'^\'.</string>
    <string name="welcome_message4">Hints:\n* Click the camera button to take math expression photo and recognize.\n&lt;div align=&quot;left&quot;&gt;&lt;img src=&quot;file:///android_asset/en/HowtoInfo/main_window_big.jpg&quot; alt=&quot;take_photo&quot; WITH_HEIGHT_TO_RECALC(800,480) /&gt;&lt;/div&gt;\n* Touch the input text box to show soft keyboard or input pad. Slide the input pad to left or right to select numbers, operators or functions to input.\n&lt;div align=&quot;left&quot;&gt;&lt;img src=&quot;file:///android_asset/en/HowtoInfo/main_window_popup_keyboard_big.jpg&quot; alt=&quot;input_by_keyboard&quot; WITH_HEIGHT_TO_RECALC(800,480) /&gt;&lt;/div&gt;\n* Input help (by clicking the life ring button or the question mark key) and then function name to get quick help information.\n&lt;div align=&quot;left&quot;&gt;&lt;img src=&quot;file:///android_asset/en/HowtoInfo/find_help_of_functions_big.jpg&quot; alt=&quot;find_help_of_functions&quot; WITH_HEIGHT_TO_RECALC(800,480) /&gt;&lt;/div&gt;</string>
    <string name="calculation_result_clearly_shown">Calculation result</string>
    <string name="copy_result_to_input">copy result</string>
    <string name="copy_expression_to_input">copy input</string>
    <string name="long_click_calculate_output">Long click output box to see results more clearly!</string>
	<string name="EXPERROR_NO_EXPRESSION">No expression!</string>
	<string name="EXPERROR_MULTIPLE_EXPRESSIONS">Multiple expressions!</string>
	<string name="EXPERROR_LACK_OPERATOR_BETWEEN_TWO_OPERANDS">Lack of operator between two operands!</string>
	<string name="EXPERROR_NUM_CAN_NOT_HAVE_TWO_DECIMAL_POINT">Two decimal points in one number!</string>
	<string name="EXPERROR_NUM_DO_NOT_ACCORD_DECIMAL_NUM_WRITING_STANDARD">Does not match with decimal number writing standard!</string>
	<string name="EXPERROR_OPERATOR_NOT_EXIST">No-exist operator!</string>
	<string name="EXPERROR_UNMATCHED_RIGHTPARENTHESE">Cannot find a left parnthese to match the right parenthese!</string>
	<string name="EXPERROR_UNMATCHED_LEFTPARENTHESE">Cannot find a right parnthese to match the left parenthese!</string>
	<string name="EXPERROR_WRONG_OPERAND_TYPE">Incorrect operand type!</string>
	<string name="EXPERROR_INCORRECT_ANSWER_OF_POWER_FUNCTION_OPERANDS">Incorrect answer of power function operand!</string>
	<string name="EXPERROR_INCORRECT_BINARY_OPERATOR">Incorrect binary operator!</string>
	<string name="EXPERROR_INCORRECT_MONADIC_OPERATOR">Incorrect monadic operator!</string>
	<string name="EXPERROR_LACK_OPERAND">Lack of operand!</string>
	<string name="EXPERROR_CAN_NOT_IDENTIFIED_CHARACTER">Can not identify character!</string>
	<string name="EXPERROR_DATATYPE_IS_NOT_DEFINED">Undefined data type!</string>
	<string name="EXPERROR_CAN_NOT_CHANGE_A_NOTEXIST_DATUM_TO_ANY_OTHER_DATATYPE">Can not change a no-exist DATUM to any other data type!</string>
	<string name="EXPERROR_NEW_DATATYPE_IS_NOT_DEFINED">Undefined new data type!</string>
	<string name="EXPERROR_INTEGER_OVERFLOW">Integer overflow!</string>
	<string name="EXPERROR_DOUBLE_OVERFLOW">Double overflow!</string>
	<string name="EXPERROR_CHANGE_FROM_DOUBLE_TO_INTEGER_OVERFLOW">Overflow when convert double to integer!</string>
	<string name="EXPERROR_OPERAND_OF_FACTORIAL_MAY_BE_TOO_LARGE">Too large operand of factorial!</string>
	<string name="EXPERROR_DIVISOR_CAN_NOT_BE_ZERO">Zero division!</string>
	<string name="EXPERROR_OPERAND_OF_FACTORIAL_CAN_NOT_LESS_THAN_ZERO">Negative operand of factorial!</string>
	<string name="EXPERROR_OPERAND_OF_BIT_OPERATION_MUST_BE_GREATER_THAN_ZERO">No-positive operand of bit operation!</string>
	<string name="EXPERROR_INCORRECT_NUM_OF_PARAMETER">Incorrect number of parameters!</string>
	<string name="EXPERROR_INVALID_PARAMETER_RANGE">Invalid parameter range!</string>
	<string name="EXPERROR_INVALID_PARAMETER_TYPE">Invalid parameter type!</string>
	<string name="EXPERROR_UNDEFINED_FUNCTION">Undefined function!</string>
	<string name="EXPERROR_UNDEFINED_VARIABLE">Undefined variable!</string>
	<string name="go_button">Go!</string>
	<string name="numbers_operators_button_long">numbers\noperators</string>
	<string name="common_functions_button_long">common\nfunctions</string>
	<string name="more_functions_button_long">more\nfunctions</string>
	<string name="numbers_operators_button_short">1+2*3</string>
	<string name="common_functions_button_short">f(x)</string>
	<string name="more_functions_button_short">f()...</string>
	<string name="left_button">Left</string>
	<string name="right_button">Right</string>
	<string name="eraze_button">Erase</string>
	<string name="help_button">Help</string>
    <string name="x_help_info">X is the name of to-solve or to-plot variable x or part of name of other to-solve or to-plot variables like x1, xy, xx etc.</string>
    <string name="y_help_info">Y is the name of to-solve or to-plot variable y or part of name of other to-solve or to-plot variables like y3, xy, yyyy etc.</string>
    <string name="z_help_info">Z is the name of to-solve or to-plot variable z or part of name of other to-solve or to-plot variables like z2, zx, zzz etc.</string>
    <string name="u_help_info">U is the name of to-solve or to-plot variable u or part of name of other to-solve or to-plot variables like u1, uy, uu etc.</string>
    <string name="v_help_info">V is the name of to-solve or to-plot variable v or part of name of other to-solve or to-plot variables like v3, xv, vvvv etc.</string>
    <string name="t_help_info">T is the name of to-solve or to-plot variable t or part of name of other to-solve or to-plot variables like t2, tx, ttt etc.</string>
    <string name="r_help_info">R is the name of to-solve or to-plot variable r (usually used to plot polar graphs) or part of name of other to-solve or to-plot variables like r2, rx, rrr etc.</string>
    <string name="close">Close</string>
    <string name="file_manager_new_file_type_script_file">New script file</string>
    <string name="file_manager_new_file_type_folder">New folder</string>
    <string name="file_manager_new_file_prompt">Please enter the name :</string>
	<string name="choose_sc_inputpad_config">Config smart calculator inputpad</string>
	<string name="choose_cl_inputpad_config">Config command line inputpad</string>
	<string name="choose_se_inputpad_config">Config script editor inputpad</string>
	<string name="choose_integ_plot_inputpad_config">Config other inputpad(s)</string>
	<string name="choose_2d_graph_plotter">Plot 2D chart</string>
	<string name="choose_polar_graph_plotter">Plot polar chart</string>
	<string name="choose_3d_graph_plotter">Plot 3D chart</string>
	<string name="graph_name_prompt">Chart name:</string>
	<string name="graph_title_prompt">Chart title:</string>
	<string name="graph_Xtitle_prompt">X title:</string>
	<string name="graph_Ytitle_prompt">Y title:</string>
	<string name="graph_show_grid_chkbox_prompt">Show\ngrid</string>
	<string name="add_curve_btn_text">Add curve</string>
	<string name="clear_all_btn_text">Clear</string>
	<string name="generate_chart_btn_text">View</string>
	<string name="inputkey_shown_prompt">Shown Name:</string>
	<string name="inputkey_shown_color_prompt">Text Color:</string>
	<string name="inputkey_input_string_prompt">Input Text:</string>
	<string name="inputkey_input_match_shown">Input Text Same as Shown Name</string>
	<string name="cursorplace_front_prompt">Cursor Place (number of characters counted backwards):</string>
	<string name="inputkey_hint_4_context_menu">Hint: if you want to cut, copy, paste, delete or insert an input key button, long click it.</string>
	<string name="digit_after_decimal_point_prompt">Number of significant digits :</string>
	<string name="insert_constant_value_text">Insert value</string>
	<string name="insert_function_text">Insert function</string>
	<string name="rotate_90_degrees">Rotate 90 degrees</string>
	<string name="rotate_180_degrees">Rotate 180 degrees</string>
	<string name="rotate_270_degrees">Rotate 270 degrees</string>
	<string name="rotate_any_degrees">Rotate arbitrary degrees</string>
	<string name="enter_rotate_degrees_prompt">Number of degrees to rotate:</string>
    <string name="turn_on_flash_prompt">Torch</string>
    <string name="preview_start_to_calculate">Calc</string>
    <string name="preview_start_to_plot">Plot</string>
    <string name="preview_start_to_recognize">Read</string>
</resources>