<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 	<RadioGroup
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
 		android:id="@+id/radioGrp_plotter_type"
 		android:checkedButton="@+id/radioBtn_3d_graph_plotter" >
	    <RadioButton 
	    	android:text="@string/choose_2d_graph_plotter" 
	    	android:id="@+id/radioBtn_2d_graph_plotter" ></RadioButton>
	    <RadioButton 
	    	android:text="@string/choose_polar_graph_plotter" 
	    	android:id="@+id/radioBtn_polar_graph_plotter" ></RadioButton>
	    <RadioButton 
	    	android:text="@string/choose_3d_graph_plotter" 
	    	android:id="@+id/radioBtn_3d_graph_plotter" ></RadioButton>

	</RadioGroup>
</LinearLayout>