<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
 	<RadioGroup
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal"
 		android:id="@+id/radioGrp_new_file_type"
 		android:checkedButton="@+id/radioBtn_new_script" >
	    <RadioButton 
	    	android:text="@string/file_manager_new_file_type_script_file" 
	    	android:id="@+id/radioBtn_new_script" ></RadioButton>
	    <RadioButton 
	    	android:text="@string/file_manager_new_file_type_folder" 
	    	android:id="@+id/radioBtn_new_folder" ></RadioButton>

	</RadioGroup>

 	<TextView
 	    android:id="@+id/txt_enter_file_name_prompt"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content" 
 	    android:text="@string/file_manager_new_file_prompt" />
	    
 	<EditText
 	    android:id="@+id/edttxt_enter_file_name"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:singleLine="true"
 	    android:gravity="right"
 	    android:maxLines="1" />
	
 			
</LinearLayout>
