<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lLayoutInputKeyInfo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
            android:orientation="vertical" >
            
		    <TextView
		        android:id="@+id/txtViewHint"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/inputkey_hint_4_context_menu" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="" /><!-- just provide a space -->
		    
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			    <TextView
			        android:id="@+id/txtViewShown"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/inputkey_shown_prompt"/>
			
			    <EditText
			        android:id="@+id/edtTxtShown"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:singleLine="true">
			
			        <requestFocus />
			
			    </EditText>
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			    <TextView
			        android:id="@+id/txtViewShownColor"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/inputkey_shown_color_prompt"/>
			
			    <Spinner
			        android:id="@+id/spinnerTxtShownColor"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content">
			    </Spinner>
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			    <TextView
			        android:id="@+id/txtViewInput"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/inputkey_input_string_prompt"/>
			
			    <EditText
			        android:id="@+id/edtTxtInput"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
					android:singleLine="true">
			    </EditText>
			</LinearLayout>
			
		    <CheckBox
		        android:id="@+id/chkBoxCopy2Input"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/inputkey_input_match_shown" />
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			    <TextView
			        android:id="@+id/txtViewCursorPlace"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight="3"
			        android:lines="3"
			        android:gravity="top"
			        android:text="@string/cursorplace_front_prompt"/>
			
			    <EditText
			        android:id="@+id/edtTxtCursorPlace"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:inputType="number"
					android:singleLine="true">
			    </EditText>
			</LinearLayout>
		</LinearLayout>
    </ScrollView>
</LinearLayout>