<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<ScrollView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_above="@+id/layoutICInputMethodHolder"
		android:id="@+id/svICInputMethodContainer"
		>
		<LinearLayout
		    android:id="@+id/plot_graph_base_view"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    
		    <LinearLayout 
				android:id="@+id/chart_name_title_input"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    >
			    <TextView 
			        android:layout_weight="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/graph_name_prompt"
			        android:gravity="center"
			        android:singleLine="true"
			        />
			    <EditText
			        android:id="@+id/graph_name_edit"
			        android:layout_weight="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:singleLine="true"
					 >
			
			        <requestFocus />
			    </EditText>
			    
			    <TextView 
			        android:layout_weight="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/graph_title_prompt"
			        android:gravity="center"
			        android:singleLine="true"
			        />
				<EditText
			        android:id="@+id/graph_title_edit"
			        android:layout_weight="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:singleLine="true"
					/>
			</LinearLayout>
				    
			<LinearLayout 
				android:id="@+id/XY_title_input_show_grid"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    >
				<LinearLayout 
				android:layout_weight="1"
				android:id="@+id/X_title_input"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    >
				    <TextView 
				        android:layout_weight="1"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/graph_Xtitle_prompt"
				        android:id="@+id/textview_Xtitle_prompt"
				        android:gravity="center"
				        android:singleLine="true"
				        />
					<EditText
				        android:id="@+id/graph_Xtitle_edit"
				        android:layout_weight="1"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:singleLine="true"
						/>
				</LinearLayout>
				<LinearLayout 
				android:layout_weight="1"
				android:id="@+id/Y_title_input"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    >
					<TextView 
				        android:layout_weight="1"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/graph_Ytitle_prompt"
				        android:id="@+id/textview_Ytitle_prompt"
				        android:gravity="center"
				        android:singleLine="true"
				        />
					<EditText
				        android:id="@+id/graph_Ytitle_edit"
				        android:layout_weight="1"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:singleLine="true"
						/>
				</LinearLayout>
				<CheckBox 
				    android:id="@+id/graph_show_grid_chkbox"
				    android:layout_weight="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/graph_show_grid_chkbox_prompt"
			        android:checked="true"
				    />
			</LinearLayout>
			<LinearLayout 
				android:id="@+id/graph_control_btns"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    >
			   <Button
					android:id="@+id/add_curve_btn"
					android:layout_weight="1"
			        android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/add_curve_btn_text"
				/>
			   <Button
					android:id="@+id/clear_plot_settings_btn"
					android:layout_weight="1"
			        android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/clear_all_btn_text"
				/>
			   <Button
					android:id="@+id/generate_chart_btn"
					android:layout_weight="1"
			        android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/generate_chart_btn_text"
				/>
			</LinearLayout>
		
			<LinearLayout android:id="@+id/curve_def_list"
		              android:layout_width="fill_parent"
		              android:layout_height="wrap_content"
		              android:orientation="vertical" />
								
			<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:id="@+id/layoutAdView" >
				<!-- com.google.ads.AdView android:id="@+id/adViewCmdline"
									   android:layout_width="fill_parent"
									   android:layout_height="wrap_content"
									   ads:adUnitId="ca-app-pub-9004844319824679/3238161316"
									   ads:adSize="BANNER"
									   ads:loadAdOnCreate="false" /-->
			</LinearLayout>
		    
		</LinearLayout>
	</ScrollView>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/layoutICInputMethodHolder"
		android:visibility="visible"
		android:layout_alignParentBottom="true"
		>
	</LinearLayout>
</RelativeLayout>
