<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <FrameLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:id="@+id/surfaceview_holder"
	    >
	</FrameLayout>
	
    <RelativeLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@null"
        >
		<LinearLayout
	    	android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="@null"
		    android:layout_alignParentTop="true" 
		    android:layout_above="@+id/linearLayoutPreviewActions"
		     >
        	<LinearLayout
		    	android:orientation="vertical"
			    android:layout_width="0dp"
			    android:layout_weight="2"
			    android:layout_height="fill_parent"
			    android:id="@+id/linearLayoutSelectRectangle"
			    android:background="@null"
			     >
			</LinearLayout><!-- a place holder and provide canvas to draw selection rectangle -->
		</LinearLayout>
					
		<LinearLayout
	    	android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
	    	android:background="@color/opaque_black_background"
		    android:id="@+id/linearLayoutPreviewActions" >
		    <CheckBox android:id="@+id/turn_on_flash"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:checked="false"
		        android:text="@string/turn_on_flash_prompt"
		    />
			<!-- do not use
			 android:textAppearance="?android:attr/textAppearanceSmall"
			 for button text considering that if we are in a large screen
			 the text would be too small.
			 -->
			<Button
				android:id="@+id/btnStartPreviewRecog"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
			    android:layout_height="match_parent"
				android:maxLines="2"
				android:text="@string/preview_start_to_recognize"
				android:drawableLeft="@drawable/recognize"
  				android:gravity="center|center_vertical"
			/>
			<Button
				android:id="@+id/btnStartPreviewPlot"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
			    android:layout_height="match_parent"
				android:maxLines="2"
				android:text="@string/preview_start_to_plot"
				android:drawableLeft="@drawable/startplot"
  				android:gravity="center|center_vertical"
			/>
			<Button
				android:id="@+id/btnStartPreviewCalc"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
			    android:layout_height="match_parent"
				android:maxLines="2"
				android:text="@string/preview_start_to_calculate"
				android:drawableLeft="@drawable/start"
  				android:gravity="center|center_vertical"
			/>
			<Button
				android:id="@+id/btnPreviewHelp"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
			    android:layout_height="match_parent"
				android:maxLines="2"
				android:text="@string/help_button"
				android:drawableLeft="@drawable/quickhelp"
  				android:gravity="center|center_vertical"
			/>
		</LinearLayout>
	</RelativeLayout>
</RelativeLayout>
